net: Replace pktdrv with nvnetdrv

--- a/lib/net/Makefile
+++ b/lib/net/Makefile
@@ -9,8 +9,8 @@ LWIPSRCS := $(COREFILES) \
             $(NETIFFILES)
 
 # Include driver sources
-DRIVERSRCS := $(NXDK_DIR)/lib/net/pktdrv/pktdrv.c \
-              $(NXDK_DIR)/lib/net/nforceif/src/driver.c \
+DRIVERSRCS := $(NXDK_DIR)/lib/net/nvnetdrv/nvnetdrv.c \
+              $(NXDK_DIR)/lib/net/nvnetdrv/nvnetdrv_lwip.c \
               $(NXDK_DIR)/lib/net/nforceif/src/sys_arch.c
 
 NET_SRCS := \
@@ -21,10 +21,10 @@ NET_OBJS = $(addsuffix .obj, $(basename $(NET_SRCS)))
 
 NXDK_CFLAGS += -I$(LWIPDIR)/include
 NXDK_CFLAGS += -I$(NXDK_DIR)/lib/net/nforceif/include
-NXDK_CFLAGS += -I$(NXDK_DIR)/lib/net/pktdrv
+NXDK_CFLAGS += -I$(NXDK_DIR)/lib/net/nvnetdrv
 NXDK_CXXFLAGS += -I$(LWIPDIR)/include
 NXDK_CXXFLAGS += -I$(NXDK_DIR)/lib/net/nforceif/include
-NXDK_CXXFLAGS += -I$(NXDK_DIR)/lib/net/pktdrv
+NXDK_CXXFLAGS += -I$(NXDK_DIR)/lib/net/nvnetdrv
 
 $(NXDK_DIR)/lib/libnxdk_net.lib: $(NET_OBJS)
 
